S3_Hands-on_02/cfn-temp.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  
Parameters:

  KeyPair:
    Description: Select your keypair.
    Type: AWS::EC2::KeyPair::KeyName

  InstanceType:
    Description: Select your instance type.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano
      - t3.nano
  
Mappings:
  
  
Resources:
  myLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: "String"
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyPair
        SecurityGroupIds:
          -
        SecurityGroups:
          -
        UserData: 
        #!/bin/bash
        #update os
        yum update -y
        #install apache server
        yum install -y httpd
        # get private ip address of ec2 instance using instance metadata
        TOKEN=curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600" \
        && PRIVATE_IP=curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4
        # get public ip address of ec2 instance using instance metadata
        TOKEN=curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600" \
        && PUBLIC_IP=curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4 
        # get date and time of server
        DATE_TIME=date
        # set all permissions
        chmod -R 777 /var/www/html
        # create a custom index.html file
        echo "<html>
        <head>
            <title> Congratulations! You have created an instance from Launch Template</title>
        </head>
        <body>
            <h1>This web server is launched from launch template by YOUR_NAME</h1>
            <p>This instance is created at <b>$DATE_TIME</b></p>
            <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
            <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
        </body>
        </html>" > /var/www/html/index.html
        # start apache server
        systemctl start httpd
        systemctl enable httpd
        


  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSh and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: "String" # add later

  myTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 3
      VpcId: "String"  # add later

# Outputs:
